<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_weather_page">Weather</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="units_label">Units</string>
    <string name="fahrenheit_label">\u00B0F</string>
    <string name="celsius_label">\u00B0C</string>
    <string name="search_hint">Enter zip code</string>
    <string name="add_label">Add</string>
    <string name="location_update_cancel_label">Location update is cancelled.</string>
    <string name="weatherinfo_update_cancel_label">Fetching weather information is cancelled.</string>
    <string name="location_fail_label">Unable to get location!</string>
    <string name="weather_fail_label">Unable to get weather information!</string>
    <string name="zip_fail_label">No city found!</string>
    <string name="no_network_label">No internet connection!</string>



    <string name="my_locations_label">My Locations</string>
    <string name="fetch_location_label">Fetching current location...</string>
    <string name="fetch_weatherinfo_label">Fetching weather information...</string>
    <string name="fetch_city_label">Looking up city name...</string>
    <string name="load_data_label">Loading data...</string>


    <string name="refresh_label">refresh</string>
    <string name="location_founded_label">Location found!</string>
    <string name="description_hint">Click an above weekday for summery!</string>
    <string name="space_holder">- - - - -</string>
    <string name="location_update">Update Location</string>
    <string name="days_label">Days to be shown:</string>
    <string name="update_label">update</string>

    <string name="days_number_label">Please input a number between 1 ~ 4!</string>
    <string name="days_updated_label">Update completed!</string>


    <string name="wind_label">Wind: </string>
    <string name="feel_label">Feels like: </string>
    <string name="UV_label">UV index: </string>
    <string name="humidity_label">Humidity: </string>
    <string name="rain_hr_label">Rain 1hr: </string>
    <string name="rain_day_label">Rain today: </string>
    <string name="brief"> brief: </string>


</resources>
