
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#130837">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/units_label"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/units_label"
            android:layout_marginLeft="20dp"
            android:textColor="#FFFFFF" />

        <Switch
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff=" C\u00B0 "
            android:textOn=" F\u00B0 "
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:id="@+id/notation_switch"
            android:layout_gravity="right|top" />

    </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        
        <ImageView
            android:layout_marginTop="8dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/search_icon"
            android:layout_marginLeft="20dp"
            />

        <EditText
            android:paddingLeft="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:textColor="#FFFFFF"
            android:textStyle="italic"
            android:textColorHint="#FFFFFF"/>
        <Button
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/add_label"
            android:layout_gravity="right"
            android:textColor="#FFFFFF"
            android:background="#808080"/>


    </FrameLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/my_locations_label"/>

    <ListView
        android:id="@+id/setting_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </ListView>


</LinearLayout>