<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/units_label"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25dp"
            android:text="@string/units_label"
            android:layout_marginLeft="20dp" />

        <Switch
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff=" C\u00B0 "
            android:textOn=" F\u00B0 "
            android:textSize="20dp"
            android:id="@+id/notation_switch"
            android:layout_gravity="right|top" />
        <!--
                <Button
                    android:id="@+id/fahrenheit_Button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit_label"
                    android:layout_marginLeft="218dp"
                    android:textColor="#FFFFFF"
                    android:background="#808080" />
                <Button
                    android:id="@+id/celsius_Button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius_label"
                    android:layout_marginLeft="280dp"
                    android:textColor="#FFFFFF"
                    android:background="#808080" />
        -->
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/days_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/days_label"/>

        <EditText
            android:id="@+id/number_of_days_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_toRightOf="@id/days_text"/>
        <Button
            android:id="@+id/update_days_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:background="#808080"
            android:layout_toRightOf="@id/number_of_days_EditText"
            android:text="@string/update_label"/>

    </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/search_icon_black"
            android:layout_marginLeft="20dp"
            />

        <EditText
            android:id="@+id/zip_enter_EditText"
            android:paddingLeft="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:textStyle="italic"
            />
        <Button
            android:id="@+id/add_button"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/add_label"
            android:layout_gravity="right"
            android:textColor="#FFFFFF"
            android:background="#808080"/>


    </FrameLayout>



    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_locations_label"/>

    <ListView
        android:id="@+id/setting_list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    </ListView>



</LinearLayout>